--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -3,7 +3,7 @@
     <a href="#menu" id="menuLink" class="menu-link"><span></span></a>
     <div id="menu">
       <div class="pure-menu">
-        <a class="pure-menu-heading" href="#">Pure-SM</a>
+        <a class="pure-menu-heading" href="#">GMT</a>
         <ul class="pure-menu-list">
           <li class="pure-menu-item {{ispage index.html}}pure-menu-selected{{end}}"><a href="/" class="pure-menu-link">Home</a></li>
           <li class="pure-menu-item {{ispage menu1/*}}pure-menu-selected{{end}}"><a href="/menu1/" class="pure-menu-link">Code blocks</a></li>
