--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -7,7 +7,8 @@
         <ul class="pure-menu-list">
           <li class="pure-menu-item {{ispage index.html}}pure-menu-selected{{end}}"><a href="/" class="pure-menu-link">Home</a></li>
           <li class="pure-menu-item {{ispage menu1/*}}pure-menu-selected{{end}}"><a href="/menu1/" class="pure-menu-link">散布図</a></li>
-          <!-- <li class="pure-menu-item {{ispage menu2/*}}pure-menu-selected{{end}}"><a href="/menu2/" class="pure-menu-link">More goodies</a></li> -->
+          <li class="pure-menu-item {{ispage menu2/*}}pure-menu-selected{{end}}"><a href="/menu2/" class="pure-menu-link">軸</a></li>
+          <li class="pure-menu-item {{ispage griddata/*}}pure-menu-selected{{end}}"><a href="/griddata/" class="pure-menu-link">グリッドデータ</a></li>
           <li class="pure-menu-item {{ispage menu3/*}}pure-menu-selected{{end}}"><a href="/menu3/" class="pure-menu-link">Tags</a></li>
         </ul>
       </div>
