--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -9,6 +9,7 @@
           <li class="pure-menu-item {{ispage menu1/*}}pure-menu-selected{{end}}"><a href="/menu1/" class="pure-menu-link">散布図</a></li>
           <li class="pure-menu-item {{ispage menu2/*}}pure-menu-selected{{end}}"><a href="/menu2/" class="pure-menu-link">軸</a></li>
           <li class="pure-menu-item {{ispage dtaxis/*}}pure-menu-selected{{end}}"><a href="/dtaxis" class="pure-menu-link">日付型の軸</a></li>
+          <li class="pure-menu-item {{ispage plot_dt/*}}pure-menu-selected{{end}}"><a href="/plot_dt" class="pure-menu-link">日付型の散布図</a></li>
           <li class="pure-menu-item {{ispage griddata/*}}pure-menu-selected{{end}}"><a href="/griddata/" class="pure-menu-link">グリッドデータ</a></li>
           <li class="pure-menu-item {{ispage menu3/*}}pure-menu-selected{{end}}"><a href="/menu3/" class="pure-menu-link">Tags</a></li>
         </ul>
