--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -1,3 +1,7 @@
+/* custom css */
+.date{
+  text-align: right;
+}
 /* ==================================================================
     VARIABLES
 ================================================================== */
