20250301h2 add grid pixel reggistration

--- a/_css/franklin.css
+++ b/_css/franklin.css
@@ -2,6 +2,10 @@
 .date{
   text-align: right;
 }
+.naka{
+  text-align: center;
+}
+
 /* ==================================================================
     VARIABLES
 ================================================================== */
@@ -9,8 +13,8 @@
 :root {
   --block-background: hsl(0, 0%, 94%);
   --output-background: hsl(0, 0%, 98%);
-  --small: 14px;
-  --normal: 19px;
+  --small: 12px;
+  --normal: 16px;
   --text-color: hsv(0, 0%, 20%);
 }
 
