--- a/_layout/style.html
+++ b/_layout/style.html
@@ -1,6 +1,7 @@
 <link rel="stylesheet" href="/css/franklin.css">
 <link rel="stylesheet" href="/css/pure.css">
 <link rel="stylesheet" href="/css/side-menu.css">
+<link rel="stylesheet" href="/css/gmtmemo.css">
 <!-- style adjustments -->
 <style>
 .franklin-content{padding-left:10%;}
